k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal
---
apiVersion: v1
kind: Namespace
metadata:
  name: compute
